doc/gramatica.txt
Class -> Class_Definition Attribute_Definition Functions
Class_Definition -> Noun "ASSIGN" "CLASS"
Attribute_Definition -> "PRP" "OWN" Attribute_Cycle
Attribute_Cycle -> Attribute [ "," Attribute_Cycle ]
Attribute -> Noun [ "ASSIGN" ( Number | String | Boolean | Pair | Array ) ]
Functions -> Function_Declarations Function_Definition
Function_Declarations -> "PRP" NounCycle
Function_Definition -> "TO" Noun [Function_Parameters] ( Function_Body | Function_Print) [Function_Definition]
Function_Parameters -> "PRP" "PARAMVERB" NounCycle
Function_Print -> "PRP" "PRINT" AnyTokenCycle
Function_Body -> FBody_Cycle [ "RETURN" Basic_Type ]
FBody_Cycle -> ( Function_Call | Action ) [ "," FBody_Cycle ]
Function_Call -> "PRP" "BODYVERB" Noun [ "PARL" [ Argument_Cycle ] "PARR" ]
AnyTokenCycle -> AnyToken [ AnyTokenCycle ]
AnyToken -> (All tokens until "," or "PTRSTOP")
NounCycle -> Noun [ "," NounCycle ]
Argument_Cycle -> Basic_Type [ "," Argument_Cycle ]
Action -> "PRP$" Noun ( "ADD" | "SUBS" | "ASSIGN" ) Basic_Type
Basic_Type -> Number | String | Noun | Boolean
Noun -> "NN" | "NNP"
Number -> "CD"
String -> "STRSTART [ Content ] STRSTOP"
Content -> ( anything found inside is valid until STRSTOP is found )
Boolean -> "TRUE" | "FALSE"
Pair -> "PARL" "CD" "PARR"
Array -> "BRACKL" "CD" "BRACKR"
